@@ -5,6 +5,8 @@
 	(debbugs-gnu-get-bugs): Call `debbugs-search-est' for full text
 	search.
 
+	* debbugs-pkg.el (top): Upgrade package version to 0.3.
+
 2011-09-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* debbugs.el (debbugs-get-status): Handle the case of nil
